Add README, Docker configuration, and deployment files for ViVu Chat application; implement Docker Compose setup for PostgreSQL, Ollama, Spring Boot backend, and ReactJS frontend